[project]
name = "data-streaming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastparquet>=2024.11.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyspark>=4.0.1",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
